# livetree

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW_FINDINGS.md  CODING_PLAN.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  build.rs  deny.toml  install.sh  pla_publicacio.md  plan_treewatch.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  event_loop.rs  highlight.rs  lib.rs  main.rs  render.rs  terminal.rs  tree.rs  watcher.rs
src/tree/: layout.rs  mod.rs  walk.rs
tests/: final_integration.rs  phase0_cli.rs  phase1_tree.rs  phase2_render.rs  phase3_terminal.rs  phase4_watcher.rs  phase5_event_loop.rs  phase6_edge_cases.rs  phase7_assets.rs  security_sanitization.rs
tests/common/: mod.rs
