[package]
name = "livetree"
version = "0.1.0"
edition = "2021"
description = "Real-time directory tree watcher with flicker-free rendering"

[dependencies]
notify = "7"
notify-debouncer-full = "0.4"
walkdir = "2"
crossterm = "0.28"
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wait-timeout = "0.2"
