[package]
name = "livetree"
version = "0.3.0"
edition = "2021"
rust-version = "1.74"
authors = ["Jordi Vidal"]
description = "Real-time directory tree watcher with flicker-free rendering"
readme = "README.md"
license = "MIT"
repository = "https://github.com/INS-JVidal/livetree"
homepage = "https://github.com/INS-JVidal/livetree"
keywords = ["cli", "filesystem", "watcher", "tree", "terminal"]
categories = ["command-line-utilities", "filesystem"]

[features]
default = []

[dependencies]
notify = "8"
notify-debouncer-full = "0.4"
walkdir = "2"
crossterm = "0.28"
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
ratatui = "0.29"
anyhow = "1"
ctrlc = "3"
clap_complete = "4"
clap_mangen = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
